<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tanmaychordia.us.Settings"
    android:id="@+id/RelativeLa">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayoutSettings"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/textfield_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textfield_username"
            android:inputType="text"
            android:imeOptions="actionSend"
            android:layout_below="@+id/radioGroup"
            android:layout_alignParentStart="true"
            android:text="Tanmay Chordia" />

        <EditText
            android:id="@+id/email_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/button_username"
            android:layout_alignParentStart="true"
            android:text="tchordia@gmail.com" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radioGroup">

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Gender"
            android:id="@+id/textView2"
            android:layout_below="@+id/email_address"
            android:layout_alignEnd="@+id/Rbutton_female"
            android:layout_marginTop="10dp" />

        <RadioButton android:id="@+id/Rbutton_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:onClick="onRadioButtonClicked"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:enabled="false"
            android:checked="true" />

        <RadioButton android:id="@+id/Rbutton_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:onClick="onRadioButtonClicked"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Rbutton_male"
            android:layout_alignParentLeft="true" />

        <RadioButton android:id="@+id/Rbutton_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:onClick="onRadioButtonClicked"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Rbutton_female"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Add Significant Other"
            android:id="@+id/textView3"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/textfield_spouse"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textfield_significantOther"
            android:inputType="text"
            android:imeOptions="actionSend"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:text="Mary Jane" />

        <CheckBox android:id="@+id/female_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Subscribe for gender tips"
            android:onClick="onCheckboxClicked"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/male_tips"
            android:layout_alignParentLeft="true"
            android:checked="false" />

        <CheckBox android:id="@+id/share_significantOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_significantOther"
            android:onClick="onCheckboxClicked"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/male_tips"
            android:layout_alignParentLeft="true"
            android:checked="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save Changes"
            android:id="@+id/button2"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/textView3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Menu"
            android:id="@+id/button"
            android:layout_alignTop="@+id/button2"
            android:layout_alignStart="@+id/textView2" />

    </LinearLayout>


</RelativeLayout>
